--- a/data/events/fyziklani/fyziklani12.neon
+++ b/data/events/fyziklani/fyziklani12.neon
@@ -159,7 +159,8 @@ events:
                         label: _('Ubytování pro učitele')
                         visible: true
                         modifiable: %events.fyziklani12.appCond%
-                        factory: Chooser(_('Ubytování noc před soutěží.'), Options(%events.fyziklani12.accomodation%))
+                        factory: Chooser(_('Nechceme ubytování.'), Options(%events.fyziklani12.accomodation%))
+                        description: _('Ubytování noc před soutěží.')
                         required: false
 
             #
@@ -206,7 +207,8 @@ events:
                         label: _('Ubytování')
                         visible: true
                         modifiable: %events.fyziklani12.appCond%
-                        factory: Chooser(_('Ubytování noc před soutěží.'), Options(%events.fyziklani12.accomodation%))
+                        factory: Chooser(_('Nechceme ubytování.'), Options(%events.fyziklani12.accomodation%))
+                        description: _('Ubytování noc před soutěží.')
                         required: false
 
 
