--- a/app/config/services.neon
+++ b/app/config/services.neon
@@ -3,6 +3,7 @@
 #
 
 services:
+    router: FKSDB\Router::createRouter
     accountManager:
         class: Authentication\AccountManager
         setup:
@@ -18,7 +19,7 @@ services:
     - Authorization\RelatedPersonAuthorizator
     - FKSDB\Components\Events\ExpressionPrinter
     downloader: Astrid\Downloader(%astrid.user%, %astrid.password%, %astrid.host%, %tempDir%, %contestMapping%, ...)
-    Facebook: self({appId: %facebook.appId%, secret: %facebook.secret%})
+   # Facebook: self({appId: %facebook.appId%, secret: %facebook.secret%})
     globalParameters: FKSDB\Config\GlobalParameters
     yearCalculator: YearCalculator
     news: News
